Prevent text from overflowing the cell

--- a/static/sass/_pattern_cve.scss
+++ b/static/sass/_pattern_cve.scss
@@ -47,6 +47,8 @@
   }
 
   .cve-table .icon-container__text {
+    overflow: hidden;
+    text-overflow: ellipsis;
     width: calc(100% - 1.5rem);
   }
 
